[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "higashi"
version = "0.1.0a0"
description = "Higashi: Multiscale and integrative scHi-C analysis"
readme = "README.md"
requires-python = ">=3.9,<3.10"
license = { text = "MIT" }

dependencies = [
  "cooler>=0.8,<0.10",
  "cython>=0.29.24,<3.1",
  "h5py>=3,<3.10",
  "numpy>=1.21.2,<2",
  "pandas>=1.3.4,<2",
  "pillow>=8,<11",
  "scikit-learn>=0.23.2,<1.3",
  "scipy>=1.7.3,<1.11",
  "tqdm>=4,<5",
  "seaborn"
]

[project.optional-dependencies]
cu102 = ["torch==1.8.0"]
cu111 = ["torch==1.8.0"]
vis = [
  "cachetools>=5",
]

[tool.uv]
conflicts = [
  [
    { extra = "cu102" },
    { extra = "cu111" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu102", extra = "cu102" },
  { index = "pytorch-cu111", extra = "cu111" },
]

[[tool.uv.index]]
name = "pytorch-cu102"
url = "https://download.pytorch.org/whl/cu102"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu111"
url = "https://download.pytorch.org/whl/cu111"
explicit = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["higashi*"]

[tool.setuptools.package-data]
higashi = [
  "Higashi_vis/templates/*.css",
  "Higashi_vis/templates/*.html",
]
